[package]
name = "ads129xx"
version = "0.1.0"
authors = ["Henk Dieter <henkdieter@tweedegolf.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
void = {version = "1.0.2", default-features = false}